# a_share

./: .gitattributes  README.md
topics/01_askhare_qlib/: .gitignore  INITIAL_REPORT.md  README.md  pyproject.toml
topics/01_askhare_qlib/Explore1/: README.md  requirement.md
topics/01_askhare_qlib/Explore10/: requirement_explore10.md  requirement_explore10a.md  requirement_explore10b.md  requirement_explore10c.md  requirement_explore10d.md
topics/01_askhare_qlib/Explore2/: requirement.md
topics/01_askhare_qlib/Explore3/: expand_requirement.md  ideas.md  requirement.md
topics/01_askhare_qlib/Explore4/: expand_requirement.md  requirement.md
topics/01_askhare_qlib/Explore5/: requirement.md
topics/01_askhare_qlib/Explore6/: requirement.md
topics/01_askhare_qlib/Explore7/: requirement.md
topics/01_askhare_qlib/Explore8/: expand_requirement.md  requirement.md
topics/01_askhare_qlib/Explore9/: requirement.md  requirement_expand_1.md  requirement_expand_2.md  requirement_expand_3.md  requirement_expand_4.md  requirement_expand_5.md  requirement_p0_9a.md  requirement_p0_9b.md
topics/01_askhare_qlib/baseline/: BaseRate-Alpha158-LGBM-OOS.md
topics/01_askhare_qlib/configs/: qlib_backtest_topk.yaml  qlib_lightgbm_alpha158.yaml
topics/01_askhare_qlib/ep2/: discussion.md  discussion2.md  discussion3.md  requirement_01_02_03_experiment_summary.md  requirement_01_label_and_baseline_freeze.md  requirement_02_hazard_timing_model.md  requirement_03_schedule_bridge.md  requirement_04_experiment_report.md  requirement_04_holding_exit_winner_capture_extension.md  (+1 more)
(+1817 files in other folders)
